[gd_scene load_steps=9 format=3 uid="uid://d4bksgen358x4"]

[ext_resource type="Script" path="res://scripts/prototype_smart_enemy/enemy.gd" id="1_fp571"]
[ext_resource type="Script" path="res://scripts/prototype_smart_enemy/enemy_ray_cast_2d.gd" id="2_ah3t5"]
[ext_resource type="Script" path="res://scripts/prototype_smart_enemy/enemy_state_machine.gd" id="3_bmoa3"]
[ext_resource type="Script" path="res://scripts/prototype_smart_enemy/enemy_wander_state.gd" id="4_8fx22"]
[ext_resource type="Script" path="res://scripts/prototype_smart_enemy/enemy_follow_state.gd" id="5_2td1b"]
[ext_resource type="Script" path="res://scripts/prototype_smart_enemy/enemy_attack_state.gd" id="6_wmypl"]
[ext_resource type="Script" path="res://scripts/util/ray_direction_setup.gd" id="7_o8o6u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_au13p"]
radius = 51.0098

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(4, 4)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_fp571")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_au13p")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.235816, 0.0160071, 0.391513, 1)
offset = Vector2(-50, -50)
polygon = PackedVector2Array(0, 0, 100, 0, 100, 100, 0, 100)

[node name="Polygon2D" type="Polygon2D" parent="Polygon2D"]
position = Vector2(50, 0)
color = Color(1, 0.176471, 0.113725, 1)
offset = Vector2(-105, -52)
polygon = PackedVector2Array(116, 20, 116, 84, 94, 84, 94, 20)

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(96, 78)
script = ExtResource("2_ah3t5")

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("3_bmoa3")

[node name="EnemyWanderState" type="Node" parent="EnemyStateMachine"]
script = ExtResource("4_8fx22")

[node name="EnemyFollowState" type="Node" parent="EnemyStateMachine"]
script = ExtResource("5_2td1b")

[node name="EnemyAttackState" type="Node" parent="EnemyStateMachine"]
script = ExtResource("6_wmypl")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 60.0
avoidance_layers = 2
avoidance_mask = 2
debug_enabled = true

[node name="Timer" type="Timer" parent="NavigationAgent2D"]

[node name="RayDirection" type="Node2D" parent="."]
script = ExtResource("7_o8o6u")
number_of_rays = 32

[connection signal="ready" from="RayDirection" to="RayDirection" method="_on_ready"]
